tests/reference/asr-private1-f9f97ce.stderr
semantic error: Variable 'x' is not declared
  --> tests/errors/private1.f90:21:5
   |
21 |     x = 5
   |     ^ 'x' is undeclared
